--- a/Regression/README
+++ b/Regression/README
@@ -1,7 +1,6 @@
-# Explore Different Regression Techniques
+#Explore Different Regression Techniques
 
-
-- Assignment link: http://facweb.cs.depaul.edu/mobasher/classes/CSC478/Assignments/assign3.html
-- Built linear regression from scratch
-- Compared the performance of different regression models: Ridge, Lasso, Stochastic Gradient Descent and Elastic Net
-- Used sklearn-gridsearch to find the best parameter combination
+Assignment link: http://facweb.cs.depaul.edu/mobasher/classes/CSC478/Assignments/assign3.html
+Built linear regression from scratch
+Compared the performance of different regression models: Ridge, Lasso, Stochastic Gradient Descent and Elastic Net
+Used sklearn-gridsearch to find the best parameter combination
